--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,61 @@
+# Dependencies
 node_modules
+npm-debug.log
+yarn-debug.log
+yarn-error.log
+package-lock.json
+yarn.lock
+
+# Environment variables and configs
+.env
+.env.*
+.env.test
+.env.local
+.env.development
+.env.production
+*.config.js
+config.js
+config.json
+
+# Logs
+logs
+*.log
+
+# Docker
+.docker
+docker-compose.override.yml
+Dockerfile.dev
+docker-compose.yml
+
+# Build directories
+dist
+build
+out
+.output
+
+# Secrets and credentials
+*.pem
+*.key
+*.cert
+*.p12
+*credentials*
+*credential*
+*secret*
+*password*
+*token*
+*auth*
+
+# IDE and editors
+.idea
+.vscode
+*.sublime-*
+.DS_Store
+.fleet
+.project
+.settings
+
+# OS files
+Thumbs.db
+ehthumbs.db
+Desktop.ini
+$RECYCLE.BIN/
